add/remove for football team functionality

--- a/markup/_layouts/_content/create-team-football-content.jade
+++ b/markup/_layouts/_content/create-team-football-content.jade
@@ -160,7 +160,7 @@ section.nl-section.nl-players.nl-create-team
 
                                                         div.col-6
                                                             p Sebastian Giovinco
-                                                            p G
+                                                            p.nl-position FLEX
                                                             p
                                                                 button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
@@ -218,7 +218,7 @@ section.nl-section.nl-players.nl-create-team
                                                     div.row
                                                         div.col-6
                                                             p Sebastian Giovinco
-                                                            p DL
+                                                            p.nl-position K
                                                             p
                                                                 button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
@@ -271,7 +271,7 @@ section.nl-section.nl-players.nl-create-team
                                                     div.row
                                                         div.col-6
                                                             p Sebastian Giovinco
-                                                            p DR
+                                                            p.nl-position LRB
                                                             p
                                                                 button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
@@ -324,7 +324,7 @@ section.nl-section.nl-players.nl-create-team
                                                     div.row
                                                         div.col-6
                                                             p Sebastian Giovinco
-                                                            p DAL
+                                                            p.nl-position RRB
                                                             p
                                                                 button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
@@ -377,7 +377,7 @@ section.nl-section.nl-players.nl-create-team
                                                     div.row
                                                         div.col-6
                                                             p Sebastian Giovinco
-                                                            p DAR
+                                                            p.nl-position QB
                                                             p
                                                                 button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
@@ -430,7 +430,7 @@ section.nl-section.nl-players.nl-create-team
                                                     div.row
                                                         div.col-6
                                                             p Sebastian Giovinco
-                                                            p CM
+                                                            p.nl-position LWR
                                                             p
                                                                 button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
@@ -483,7 +483,7 @@ section.nl-section.nl-players.nl-create-team
                                                     div.row
                                                         div.col-6
                                                             p Sebastian Giovinco
-                                                            p RWM
+                                                            p.nl-position RWR
                                                             p
                                                                 button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
@@ -536,172 +536,13 @@ section.nl-section.nl-players.nl-create-team
                                                     div.row
                                                         div.col-6
                                                             p Sebastian Giovinco
-                                                            p LWM
+                                                            p.nl-position TE
                                                             p
                                                                 button.btn.btn-primary.btn-sm.disabled Draft
                                                         div.col-6
                                                             p 28.33
                                                             p $12,500
                                             div(id="collapseEight" class="collapse" role="tabpanel" aria-labelledby="headingEight")
-                                                div.card-block
-                                                    div.row.align-items-center
-                                                        div.col-6
-                                                            p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
-                                                        div.col-6
-                                                            p.nl-pl-social
-                                                                a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                                                                a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
-                                                                a(href="#") <i class="fa fa-facebook-square" aria-hidden="true"></i>
-                                                        div.col-6
-                                                            p
-                                                                span LEAGUE:
-                                                        div.col-6
-                                                            p
-                                                                p <img src="assets/img/flag/USA.png" alt="USA">
-                                                        div.col-6
-                                                            p
-                                                                span NEWS:
-                                                        div.col-6
-                                                            p <i class="fa fa-newspaper-o" aria-hidden="true"></i>
-                                                        div.col-6
-                                                            p
-                                                                span TEAM:
-                                                        div.col-6
-                                                            p REAL MADRID
-                                                        div.col-6
-                                                            p
-                                                                span STATUS:
-                                                        div.col-6
-                                                            p ACT
-                                                        div.col-6
-                                                            p
-                                                                span OPP:
-                                                        div.col-6
-                                                            p Gameday
-                                                        div.col-6
-                                                            p
-                                                                span Gameday:
-                                                        div.col-6
-                                                            p 09/17/17
-                                        div.card
-                                            div.card-header(role="tab" id="headingNine")
-                                                a(class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseNine" aria-expanded="true" aria-controls="collapseNine")
-                                                    div.row
-                                                        div.col-6
-                                                            p Sebastian Giovinco
-                                                            p RS
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
-                                                        div.col-6
-                                                            p 28.33
-                                                            p $12,500
-                                            div(id="collapseNine" class="collapse" role="tabpanel" aria-labelledby="headingNine")
-                                                div.card-block
-                                                    div.row.align-items-center
-                                                        div.col-6
-                                                            p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
-                                                        div.col-6
-                                                            p.nl-pl-social
-                                                                a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                                                                a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
-                                                                a(href="#") <i class="fa fa-facebook-square" aria-hidden="true"></i>
-                                                        div.col-6
-                                                            p
-                                                                span LEAGUE:
-                                                        div.col-6
-                                                            p
-                                                                p <img src="assets/img/flag/USA.png" alt="USA">
-                                                        div.col-6
-                                                            p
-                                                                span NEWS:
-                                                        div.col-6
-                                                            p <i class="fa fa-newspaper-o" aria-hidden="true"></i>
-                                                        div.col-6
-                                                            p
-                                                                span TEAM:
-                                                        div.col-6
-                                                            p REAL MADRID
-                                                        div.col-6
-                                                            p
-                                                                span STATUS:
-                                                        div.col-6
-                                                            p ACT
-                                                        div.col-6
-                                                            p
-                                                                span OPP:
-                                                        div.col-6
-                                                            p Gameday
-                                                        div.col-6
-                                                            p
-                                                                span Gameday:
-                                                        div.col-6
-                                                            p 09/17/17
-                                        div.card
-                                            div.card-header(role="tab" id="headingTen")
-                                                a(class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseTen" aria-expanded="true" aria-controls="collapseTen")
-                                                    div.row
-                                                        div.col-6
-                                                            p Sebastian Giovinco
-                                                            p LS
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
-                                                        div.col-6
-                                                            p 28.33
-                                                            p $12,500
-                                            div(id="collapseTen" class="collapse" role="tabpanel" aria-labelledby="headingTen")
-                                                div.card-block
-                                                    div.row.align-items-center
-                                                        div.col-6
-                                                            p.avatar <img src="assets/img/pl-avatar-table.jpg" alt="Sebastian Giovinco">
-                                                        div.col-6
-                                                            p.nl-pl-social
-                                                                a(href="#") <i class="fa fa-youtube-play" aria-hidden="true"></i>
-                                                                a(href="#") <i class="fa fa-twitter" aria-hidden="true"></i>
-                                                                a(href="#") <i class="fa fa-facebook-square" aria-hidden="true"></i>
-                                                        div.col-6
-                                                            p
-                                                                span LEAGUE:
-                                                        div.col-6
-                                                            p
-                                                                p <img src="assets/img/flag/USA.png" alt="USA">
-                                                        div.col-6
-                                                            p
-                                                                span NEWS:
-                                                        div.col-6
-                                                            p <i class="fa fa-newspaper-o" aria-hidden="true"></i>
-                                                        div.col-6
-                                                            p
-                                                                span TEAM:
-                                                        div.col-6
-                                                            p REAL MADRID
-                                                        div.col-6
-                                                            p
-                                                                span STATUS:
-                                                        div.col-6
-                                                            p ACT
-                                                        div.col-6
-                                                            p
-                                                                span OPP:
-                                                        div.col-6
-                                                            p Gameday
-                                                        div.col-6
-                                                            p
-                                                                span Gameday:
-                                                        div.col-6
-                                                            p 09/17/17
-                                        div.card
-                                            div.card-header(role="tab" id="headingEleven")
-                                                a(class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEleven" aria-expanded="true" aria-controls="collapseEleven")
-                                                    div.row
-                                                        div.col-6
-                                                            p Sebastian Giovinco
-                                                            p ST
-                                                            p
-                                                                button.btn.btn-primary.btn-sm.disabled Draft
-                                                        div.col-6
-                                                            p 28.33
-                                                            p $12,500
-                                            div(id="collapseEleven" class="collapse" role="tabpanel" aria-labelledby="headingEleven")
                                                 div.card-block
                                                     div.row.align-items-center
                                                         div.col-6
@@ -885,8 +726,8 @@ section.nl-section.nl-players.nl-create-team
                             div.col-6
                                 span 154
                 div.nl-team-button
-                    button.btn.btn-team.btn-big-radius.active(type="button") field view
-                    button.btn.btn-team.btn-big-radius(type="button") list view
+                    button.btn.btn-team.btn-big-radius.active(type="button").field-view-btn field view
+                    button.btn.btn-team.btn-big-radius(type="button").list-view-btn list view
                 div.nl-team-field.football
                     div.striker-line
                     div.midfielder-line
