--- a/markup/_scss/style.scss
+++ b/markup/_scss/style.scss
@@ -54,6 +54,7 @@
 @import "sections/nl-players";
 @import "sections/nl-my-teams";
 @import "sections/nl-create-team";
+@import "sections/login";
 
 @import "elements/nl-theme-selector";
 
