#Contest Page: add modal

--- a/markup/_layouts/_content/contests-content.jade
+++ b/markup/_layouts/_content/contests-content.jade
@@ -48,7 +48,7 @@ section.nl-section.nl-players.nl-contests
                                                     td 3
                                                     td 1000
                                                     td
-                                                        button.btn.btn-primary.btn-sm enter
+                                                        button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
                                                     td STARTED
                                                 tr
                                                     td WK3 G Joe Theismann 5 team Challenge
@@ -57,7 +57,7 @@ section.nl-section.nl-players.nl-contests
                                                     td 3
                                                     td 1000
                                                     td
-                                                        button.btn.btn-primary.btn-sm enter
+                                                        button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
                                                     td STARTED
                                                 tr
                                                     td WK3 G Joe Theismann 5 team Challenge
@@ -66,7 +66,7 @@ section.nl-section.nl-players.nl-contests
                                                     td 3
                                                     td 1000
                                                     td
-                                                        button.btn.btn-primary.btn-sm enter
+                                                        button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
                                                     td STARTED
                                                 tr
                                                     td WK3 G Joe Theismann 5 team Challenge
@@ -75,7 +75,7 @@ section.nl-section.nl-players.nl-contests
                                                     td 3
                                                     td 1000
                                                     td
-                                                        button.btn.btn-primary.btn-sm enter
+                                                        button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
                                                     td STARTED
                                                 tr
                                                     td WK3 G Joe Theismann 5 team Challenge
@@ -84,7 +84,7 @@ section.nl-section.nl-players.nl-contests
                                                     td 3
                                                     td 1000
                                                     td
-                                                        button.btn.btn-primary.btn-sm enter
+                                                        button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
                                                     td STARTED
                                                 tr
                                                     td WK3 G Joe Theismann 5 team Challenge
@@ -93,7 +93,7 @@ section.nl-section.nl-players.nl-contests
                                                     td 3
                                                     td 1000
                                                     td
-                                                        button.btn.btn-primary.btn-sm enter
+                                                        button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
                                                     td STARTED
                                                 tr
                                                     td WK3 G Joe Theismann 5 team Challenge
@@ -102,7 +102,7 @@ section.nl-section.nl-players.nl-contests
                                                     td 3
                                                     td 1000
                                                     td
-                                                        button.btn.btn-primary.btn-sm enter
+                                                        button.btn.btn-primary.btn-sm(type='button', data-toggle='modal', data-target='#enterContestsModal') enter
                                                     td STARTED
                                                 tr
                                                     td WK3 G Joe Theismann 5 team Challenge
@@ -198,7 +198,7 @@ section.nl-section.nl-players.nl-contests
                                         p 2
                             tr
                                 td
-                                    button.btn.btn-primary(type="button") Enter
+                                    button.btn.btn-primary(type='button', data-toggle='modal', data-target='#enterContestsModal') Enter
                                 td
                                     button.btn.btn-default(type="button") Payout
                                 td
