--- a/markup/_layouts/contests.jade
+++ b/markup/_layouts/contests.jade
@@ -20,7 +20,7 @@ html(lang="en")
             include _content/contests-content
 
 
-
+        include _partials/enter-contest-modal
         include _partials/footer-log.jade
         include _partials/scripts.jade
 
