--- a/markup/_scss/style.scss
+++ b/markup/_scss/style.scss
@@ -46,6 +46,7 @@
 @import "layouts/footer";
 @import "layouts/login-modal";
 @import "layouts/registration-modal";
+@import "layouts/_enter-contasts-modal.scss";
 
 
 
