#Contest Page: dist change

--- a/markup/_layouts/_content/login-content.jade
+++ b/markup/_layouts/_content/login-content.jade
@@ -1,3 +1,4 @@
+div.nl-white-bg
 section.nl-section.login-wrapper
     #loginSection(tabindex='-1', role='dialog', aria-labelledby='loginModalLabel', aria-hidden='true')
         .modal-dialog(role='document')
