#Create register.html and login.html pages

--- a/markup/_dist/assets/css/style.css
+++ b/markup/_dist/assets/css/style.css
@@ -10941,88 +10941,190 @@ p {
   background: url(../img/nl-slide-img.jpg) top center no-repeat;
   background-size: cover; }
 
-#loginSection .modal-dialog {
-  min-height: 0; }
-
-#loginSection .modal-content {
-  border-radius: 0.5rem; }
-
-#loginSection .modal-header {
-  border-top-right-radius: .3rem;
-  border-top-left-radius: .3rem;
-  background-color: #fb8700;
-  color: #fff;
-  padding: 3.125rem 0; }
-  #loginSection .modal-header h2 {
-    margin: 0 auto;
-    font-size: 4.0625rem; }
-  #loginSection .modal-header .close {
-    background: url(../img/close_btn.png) no-repeat;
-    position: absolute;
-    top: 2.25rem;
-    right: 1.25rem;
-    height: 49px;
-    width: 49px;
-    opacity: 1;
-    outline: none; }
-    @media (max-width: 991px) {
-      #loginSection .modal-header .close {
-        top: 0.625rem;
-        right: 0.625rem; } }
-
-#loginSection .modal-header, #loginSection .modal-footer {
-  border: none; }
-
-#loginSection .modal-body, #loginSection .modal-footer {
-  background-color: #1d2d4e; }
-
-#loginSection .modal-body {
-  padding: 4.5rem 6.25rem 0; }
-  @media (max-width: 991px) {
-    #loginSection .modal-body {
-      padding: 4.5rem 1.25rem 0; } }
-  #loginSection .modal-body input {
-    height: 3.75rem;
-    width: 40.125rem;
-    border-radius: 0;
-    font-size: 1.25rem;
-    margin-bottom: 1.25rem; }
-    @media (max-width: 991px) {
-      #loginSection .modal-body input {
-        width: 100%; } }
-  #loginSection .modal-body .input-group {
+#loginSection {
+  position: relative; }
+  #loginSection .block-dialog {
+    min-height: 0; }
+  #loginSection .block-content {
+    border-radius: 0.5rem; }
+  #loginSection .block-header {
+    border-top-right-radius: .3rem;
+    border-top-left-radius: .3rem;
+    background-color: #fb8700;
+    color: #fff;
+    padding: 3.125rem 0;
     position: relative; }
-  #loginSection .modal-body .show-password {
-    -webkit-user-select: none;
-    -moz-user-select: none;
-    -ms-user-select: none;
-    user-select: none;
-    position: absolute;
-    top: 50%;
-    right: 0.9375rem;
-    -webkit-transform: translate(0, -50%);
-    transform: translate(0, -50%);
-    color: #fb8700;
-    cursor: pointer;
-    text-transform: uppercase; }
-  #loginSection .modal-body a {
-    text-decoration: underline;
-    color: #fb8700; }
-
-#loginSection .modal-footer {
-  padding: 3.625rem 0;
-  border-bottom-right-radius: .3rem;
-  border-bottom-left-radius: .3rem; }
-  #loginSection .modal-footer button {
-    width: 17.375rem;
-    margin: 0 auto;
-    font-size: 1.78813rem; }
+    #loginSection .block-header h2 {
+      margin: 0 auto;
+      font-size: 4.0625rem;
+      text-align: center; }
+    #loginSection .block-header .close {
+      background: url(../img/close_btn.png) no-repeat;
+      position: absolute;
+      top: 2.25rem;
+      right: 1.25rem;
+      height: 49px;
+      width: 49px;
+      opacity: 1;
+      outline: none; }
+      @media (max-width: 991px) {
+        #loginSection .block-header .close {
+          top: 0.625rem;
+          right: 0.625rem; } }
+  #loginSection .block-header, #loginSection .block-footer {
+    border: none; }
+  #loginSection .block-body, #loginSection .block-footer {
+    background-color: #1d2d4e; }
+  #loginSection .block-body {
+    padding: 4.5rem 6.25rem 0; }
+    @media (max-width: 991px) {
+      #loginSection .block-body {
+        padding: 4.5rem 1.25rem 0; } }
+    #loginSection .block-body input {
+      height: 3.75rem;
+      width: 40.125rem;
+      border-radius: 0;
+      font-size: 1.25rem;
+      margin-bottom: 1.25rem; }
+      @media (max-width: 991px) {
+        #loginSection .block-body input {
+          width: 100%; } }
+    #loginSection .block-body .input-group {
+      position: relative; }
+    #loginSection .block-body .show-password {
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      position: absolute;
+      top: 50%;
+      right: 0.9375rem;
+      -webkit-transform: translate(0, -50%);
+      transform: translate(0, -50%);
+      color: #fb8700;
+      cursor: pointer;
+      text-transform: uppercase; }
+    #loginSection .block-body a {
+      text-decoration: underline;
+      color: #fb8700; }
+  #loginSection .block-footer {
+    padding: 3.625rem 0;
+    border-bottom-right-radius: .3rem;
+    border-bottom-left-radius: .3rem; }
+    #loginSection .block-footer button {
+      width: 17.375rem;
+      margin: 0 auto;
+      font-size: 1.78813rem; }
 
 @media (min-width: 576px) {
-  .modal-dialog {
+  .block-dialog {
     max-width: 52.625rem; } }
 
-.modal-backdrop.show {
+.block-backdrop.show {
+  opacity: 0.8;
+  background-color: #fff; }
+
+.register-wrapper {
+  background: url(../img/nl-slide-img.jpg) top center no-repeat;
+  background-size: cover; }
+
+#registrationSection {
+  position: relative; }
+  #registrationSection .block-content {
+    border-radius: 0.5rem; }
+  #registrationSection .block-header {
+    border-top-right-radius: .3rem;
+    border-top-left-radius: .3rem;
+    background-color: #fb8700;
+    color: #fff;
+    padding: 3.125rem 0;
+    position: relative; }
+    @media (max-width: 767px) {
+      #registrationSection .block-header {
+        padding: 4.375rem 0.625rem 1.875rem; } }
+    #registrationSection .block-header h2 {
+      margin: 0 auto;
+      text-align: center;
+      font-size: 4.0625rem; }
+      @media (max-width: 767px) {
+        #registrationSection .block-header h2 {
+          font-size: 3.125rem; } }
+    #registrationSection .block-header .close {
+      background: url(../img/close_btn.png) no-repeat;
+      position: absolute;
+      top: 2.25rem;
+      right: 1.25rem;
+      height: 49px;
+      width: 49px;
+      opacity: 1;
+      outline: none; }
+      @media (max-width: 767px) {
+        #registrationSection .block-header .close {
+          top: 0.625rem;
+          right: 0.625rem; } }
+  #registrationSection .block-header, #registrationSection .block-footer {
+    border: none; }
+  #registrationSection .block-body, #registrationSection .block-footer {
+    background-color: #1d2d4e; }
+  #registrationSection .block-body {
+    padding: 4.5rem 6.25rem 0; }
+    @media (max-width: 991px) {
+      #registrationSection .block-body {
+        padding: 4.5rem 1.25rem 0; } }
+    #registrationSection .block-body input, #registrationSection .block-body select {
+      height: 3.75rem;
+      width: 40.125rem;
+      border-radius: 0;
+      font-size: 1.25rem;
+      margin-bottom: 1.25rem; }
+      @media (max-width: 991px) {
+        #registrationSection .block-body input, #registrationSection .block-body select {
+          width: 100%; } }
+    #registrationSection .block-body .input-group {
+      position: relative; }
+    #registrationSection .block-body .show-password {
+      -webkit-user-select: none;
+      -moz-user-select: none;
+      -ms-user-select: none;
+      user-select: none;
+      position: absolute;
+      top: 50%;
+      right: 0.9375rem;
+      -webkit-transform: translate(0, -50%);
+      transform: translate(0, -50%);
+      color: #fb8700;
+      cursor: pointer;
+      text-transform: uppercase; }
+    #registrationSection .block-body a {
+      text-decoration: underline;
+      color: #fb8700; }
+    #registrationSection .block-body .check-wrapper {
+      font-size: 0.75rem;
+      position: relative;
+      padding-left: 3.125rem;
+      color: #fff; }
+      #registrationSection .block-body .check-wrapper input {
+        outline: none;
+        height: 1.875rem;
+        width: 1.875rem;
+        position: absolute;
+        top: 0;
+        left: 0; }
+  #registrationSection .block-footer {
+    padding: 3.625rem 0;
+    border-bottom-right-radius: .3rem;
+    border-bottom-left-radius: .3rem; }
+    #registrationSection .block-footer button {
+      width: 17.375rem;
+      margin: 0 auto;
+      font-size: 1.78813rem; }
+
+@media (min-width: 576px) {
+  .block-dialog {
+    margin: 0 auto;
+    max-width: 52.625rem; } }
+
+.block-backdrop.show {
   opacity: 0.8;
   background-color: #fff; }
 
