--- a/markup/_layouts/_partials/header.jade
+++ b/markup/_layouts/_partials/header.jade
@@ -5,14 +5,14 @@ header.nl-header
             div.row.align-items-start
                 div.col-4.col-lg-2
                     div.nl-logotype
-                        a(href="#")
+                        a(href="index.html")
                             img(src="assets/img/logotype.svg" alt="NO Limit")
                 div.col-1.col-lg-7
                     div.nl-title The worlds first crypto fantasy sports
                 div.col-12.col-lg-3
                     div.nl-btutton-login
-                        button.btn.btn-primary.nl-m-r-15(type='button', data-toggle='modal', data-target='#loginModal') Login
-                        button.btn(type='button', data-toggle='modal', data-target='#registrationModal') SIGN UP
+                        a.btn.btn-primary.nl-m-r-15(href="login.html") Login
+                        a.btn(href="register.html") SIGN UP
 
     div.nl-header--slide
         div.owl-carousel.main-carousel
