--- a/markup/_layouts/index.jade
+++ b/markup/_layouts/index.jade
@@ -21,9 +21,8 @@ html(lang="en")
             include _content/_index/nl-section-works
             include _content/_index/nl-section-learn
 
-
-        include _partials/login-modal.jade
-        include _partials/registration-modal.jade
+        //include _partials/login-modal.jade
+        //include _partials/registration-modal.jade
         include _partials/footer.jade
         include _partials/scripts.jade
 
