--- a/markup/_layouts/register.jade
+++ b/markup/_layouts/register.jade
@@ -17,7 +17,9 @@ html(lang="en")
         //include _partials/preloader.jade
         include _partials/header-form.jade
         main
-            include _content/login-content
+
+
+            include _content/register-content
 
 
         include _partials/footer.jade
