--- a/markup/_scss/sections/_register.scss
+++ b/markup/_scss/sections/_register.scss
@@ -1,12 +1,9 @@
-.login-wrapper{
+.register-wrapper{
   background: url(../img/nl-slide-img.jpg) top center no-repeat;
   background-size: cover;
 }
-#loginSection {
-position: relative;
-  .block-dialog{
-    min-height: 0;
-  }
+#registrationSection {
+  position: relative;
 
   .block-content {
     border-radius: calculateRem(8px);
@@ -18,11 +15,17 @@ position: relative;
     color: #fff;
     padding: calculateRem(50px) 0;
     position: relative;
+    @include respond-to(allmobile){
+      padding: calculateRem(70px) calculateRem(10px) calculateRem(30px);
+    }
 
     h2 {
       margin: 0 auto;
-      font-size: calculateRem(65px);
       text-align: center;
+      font-size: calculateRem(65px);
+      @include respond-to(allmobile){
+        font-size: calculateRem(50px);
+      }
     }
     .close {
       background: url(../img/close_btn.png) no-repeat;
@@ -33,7 +36,7 @@ position: relative;
       width: 49px;
       opacity: 1;
       outline: none;
-      @include respond-to(allsmall){
+      @include respond-to(allmobile){
         top: calculateRem(10px);
         right: calculateRem(10px);
       }
@@ -52,7 +55,8 @@ position: relative;
     @include respond-to(allsmall){
       padding: calculateRem(72px) calculateRem(20px) 0;
     }
-    input {
+
+    input, select {
       height: calculateRem(60px);
       width: calculateRem(642px);
       border-radius: 0;
@@ -61,7 +65,6 @@ position: relative;
       @include respond-to(allsmall){
         width: 100%;
       }
-
     }
 
     .input-group {
@@ -82,6 +85,24 @@ position: relative;
       text-decoration: underline;
       color: #fb8700;
     }
+
+    .check-wrapper{
+      font-size: calculateRem(12px);
+      position: relative;
+      padding-left: calculateRem(50px);
+      color: #fff;
+
+      input{
+        outline: none;
+        height: calculateRem(30px);
+        width: calculateRem(30px);
+        position: absolute;
+        top: 0;
+        left: 0;
+
+
+      }
+    }
   }
   .block-footer {
     padding: calculateRem(58px) 0;
@@ -99,6 +120,7 @@ position: relative;
 
 @media (min-width: 576px) {
   .block-dialog {
+    margin: 0 auto;
     max-width: calculateRem(842px);
   }
 }
