--- a/markup/_scss/style.scss
+++ b/markup/_scss/style.scss
@@ -56,6 +56,7 @@
 @import "sections/nl-create-team";
 
 @import "sections/login";
+@import "sections/register";
 
 @import "sections/nl-contests";
 
